--- a/src/cyberafitti/templates/demo.html
+++ b/src/cyberafitti/templates/demo.html
@@ -17,11 +17,11 @@
     <div class="row empty_row"></div>
 
 
-    <form method="post">
+    <form method="post" action="demo">
         <div class="form-row">
             <div class="col-md-3"></div>
             <div class="form-group col-md-5">
-                <input class="form-control" type="text" name="search" placeholder="아프리카TV URL을 입력하세요" aria-label="Search">
+                <input class="form-control" type="text" name="query" placeholder="텍스트를 입력하세요" aria-label="Search">
             </div>
             <div class="form-group col-md-1">
                 <button class="btn btn-outline-success btn-block" type="submit">검색</button>
@@ -29,4 +29,10 @@
             <div class="col-md-3"></div>
         </div>
     </form>
+
+    <div class="row">
+        <div class="offset-4 col-md-4">
+            {{ predict }} 유해하다
+        </div>
+    </div>
 {% endblock contents %}
