--- a/src/cyberafitti/templates/index.html
+++ b/src/cyberafitti/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="offset-md-1 col-md-10">
             <div class="jumbotron">
-                <h1>Welcome to cyberaffiti</h1>
+                <h1>Welcome to Cyberaffiti</h1>
             </div>
         </div>
     </div>
