--- a/src/cyberafitti/templates/nav.html
+++ b/src/cyberafitti/templates/nav.html
@@ -32,6 +32,7 @@
           <a class="dropdown-item" href="{{url_for('youtube')}}">유튜브</a>
           <a class="dropdown-item" href="{{ url_for('afreeca')}}">아프리카</a>
           <a class="dropdown-item" href="{{ url_for('twitch') }}">트위치</a>
+          <a class="dropdown-item" href="{{ url_for('demo') }}">demo</a>
         </div>
       </li>
     </ul>
