--- a/src/cyberafitti/templates/youtube.html
+++ b/src/cyberafitti/templates/youtube.html
@@ -21,7 +21,7 @@
         <div class="form-row">
             <div class="col-md-3"></div>
             <div class="form-group col-md-5">
-                <input class="form-control" type="search" placeholder="유튜브 URL을 입력하세요" aria-label="Search">
+                <input class="form-control" type="text" name="search" placeholder="유튜브 URL을 입력하세요" aria-label="Search">
             </div>
             <div class="form-group col-md-1">
                 <button class="btn btn-outline-success btn-block" type="submit">검색</button>
