준비중입니다 적용

--- a/src/cyberafitti/templates/demo.html
+++ b/src/cyberafitti/templates/demo.html
@@ -76,11 +76,11 @@
 
                     if (res > 70){
                         result = $("<div class='alert alert-danger'/>");
-                        result.text(res +"% 유해합니다. 바른말 고운말을 사용해주세요");
+                        result.text(res +"% 유해합니다. 바른말 고운말을 사용해주세요.");
                     }
                     else if (res > 40){
                         result = $("<div class='alert alert-warning'/>");
-                        result.text( res +"% 유해합니다. 바른말 고운말을 사용해주세요");
+                        result.text( res +"% 유해합니다. 바른말 고운말을 사용해주세요.");
                     }
                     else{
                         result = $("<div class='alert alert-success'/>");
