--- a/src/cyberafitti/templates/twitch.html
+++ b/src/cyberafitti/templates/twitch.html
@@ -19,8 +19,8 @@
 
     <form method="post">
         <div class="form-row">
-            <div class="col-md-3"></div>
-            <div class="form-group col-md-5">
+            <div class="col-md-10></div>
+            <div class="form-group col-md-10">
                 <input class="form-control" type="text" name="search" placeholder="트위치 URL을 입력하세요" aria-label="Search">
             </div>
             <div class="form-group col-md-1">
