--- a/src/cyberafitti/static/new.css
+++ b/src/cyberafitti/static/new.css
@@ -19,23 +19,23 @@ body,html{
     padding: 10px;
     }
 
-    /*.search_input{*/
-    /*color: white;*/
-    /*border: 0;*/
-    /*outline: 0;*/
-    /*background: none;*/
-    /*width: 0;*/
-    /*caret-color:transparent;*/
-    /*line-height: 40px;*/
-    /*transition: width 0.4s linear;*/
-    /*}*/
+    .search_input{
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 0;
+    caret-color:transparent;
+    line-height: 40px;
+    transition: width 0.4s linear;
+    }
 
-    /*.searchbar:hover > .search_input{*/
-    /*padding: 0 10px;*/
-    /*width: 450px;*/
-    /*caret-color:red;*/
-    /*transition: width 0.4s linear;*/
-    /*}*/
+    .searchbar:hover > .search_input{
+    padding: 0 10px;
+    width: 450px;
+    caret-color:red;
+    transition: width 0.4s linear;
+    }
 
     .searchbar:hover > .search_icon{
     background: white;
