--- a/src/cyberafitti/templates/base.html
+++ b/src/cyberafitti/templates/base.html
@@ -4,11 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/bootstrap.css')}}" >
 
     <!-- Bootstrap CSS -->
-    <script src="/static/js/jquery-3.4.1.min.js"></script>
+    <script src="{{url_for('static', filename='js/jquery-3.4.1.min.js')}}"></script>
     <script src="https://kit.fontawesome.com/128a736b7f.js"></script>
+    <script src="{{ url_for('static', filename='js/Chart.bundle.min.js') }}"></script>
 
 
     <title>Cyberaffiti</title>
@@ -34,8 +36,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/static/bootstrap/bootstrap.js"></script>
-
+    <script src="{{ url_for('static', filename='bootstrap/bootstrap.min.js') }}"></script>
   </body>
 {#<footer>#}
 {#    footer!#}
