--- a/src/cyberafitti/templates/index.html
+++ b/src/cyberafitti/templates/index.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('model') }}">모델 설명</a>
+                        <a class="nav-link" href="{{ url_for('information') }}">소개</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('download') }}">다운로드</a>
