--- a/src/cyberafitti/templates/error/404.html
+++ b/src/cyberafitti/templates/error/404.html
@@ -1,12 +1,11 @@
-
 {% include 'header_full.html' %}
-    <div class="empty-row"></div>
+<div class="empty-row"></div>
     <div class="empty-row"></div>
     <div class="row text-center">
         <div class="offset-md-2 col-md-8">
             <hr>
             <br><br><br><br>
-            <h1 style="font-weight: bold;">서비스 준비중입니다</h1>
+            <h1 style="font-weight: bold;">요청하신 페이지를 찾을 수 없습니다</h1>
             <br><br><br><br>
             <hr>
         </div>
