--- a/src/cyberafitti/static/css/main.css
+++ b/src/cyberafitti/static/css/main.css
@@ -1,23 +1,3 @@
-.board {
-    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.5)), url(/static/images/cyber.jpg);
-    min-height: 100%;
-    min-width: 512px;
-
-    width: 100%;
-    height: auto;
-    position: fixed;
-    background-size: cover;
-}
-
-@media screen and(max-width: 1024px){
-    .board{
-        left: 50%;
-        margin-left: -512px;
-    }
-}
-.board-content{
-    color: white;
-}
 .empty-row {
     height:50px;
 }
@@ -29,15 +9,10 @@
     font-size: 2rem;
     font-weight: bold;
 }
-.footer{
-    bottom:0;
-    position:absolute;
-    padding-bottom: 1rem;
-}
 .accent {
     font-weight: bold;
 }
-nav{
-    background-color:transparent;
-    margin-top:0.5rem;
+.logo{
+    max-width: 2rem;
+    max-height: 2rem;
 }
