--- a/src/cyberafitti/templates/Ndemo.html
+++ b/src/cyberafitti/templates/Ndemo.html
@@ -1,7 +1,14 @@
-<link rel="stylesheet" href="{{url_for('static',filename='new.css')}}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/loading.css') }}">
+
   {% extends 'base.html' %}
   {% block contents %}
+
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
 
     <div class="container h-100">
         <div class="d-flex justify-content-center h-100">
@@ -13,6 +20,12 @@
     </div>
 
 <script>
+
+$('.search_input').focus(function(){
+    console.log('focus 발생');
+    $(".searchbar").unbind('hover');
+});
+
 var query = $('input[name=query]');
 $('#search').click(function(){
     var loading = $('<div class="cover-wrap"/>').append($('<div class="display-wrap"/>').append($("<img src='/static/images/loading.gif'/>")));
