--- a/src/cyberafitti/templates/header_full.html
+++ b/src/cyberafitti/templates/header_full.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="board">
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: transparent;">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="{{ url_for('index') }}">
                 <img class="logo" src="{{ url_for('static', filename='images/logo.png') }}">
                 Cyberaffiti</a>
