--- a/src/cyberafitti/templates/introduce.html
+++ b/src/cyberafitti/templates/introduce.html
@@ -11,10 +11,9 @@
     <!--        소개 내용-->
     <div class="row">
         <div class="offset-md-2 col-md-8">
-            <span>
-                Cyberaffiti는 아동, 청소년들에게 영향을 미치는
-                유해한 컨텐츠를 포함한 인터넷 방송을 필터링해주는 시스템 입니다.
-            </span>
+            <p> 사이버래피티는 유해한 영상으로부터 어린이 및 청소년을 보호합니다.</p>
+            <p> 사회적 흐름에따라 비속어와 신조어는 새롭게 추가되기에, 사이버래피티는 크롬 확장프로그램을 통해 지속적인 관리를 합니다. </p>
+
         </div>
     </div>
 
@@ -26,7 +25,9 @@
             <canvas id="harm"></canvas>
         </div>
     </div>
+
     <div class="empty-row"></div>
+
     <div class="row">
         <div class="offset-md-2 col-md-8">
             <p>인터넷 방송에 존재하는 유해한 컨텐츠 중 욕설, 부적절한 언어를 사용하는 컨텐츠가 유해 컨텐츠 중 <span class='accent'>51%</span>를 차지하고 있습니다.</p>
@@ -35,7 +36,7 @@
         </div>
     </div>
 
-    <br>
+    <div class="empty-row"></div>
     <!--        성능 -> 실제 채팅을 가지고 attention 시각화 한것 보여주기 -->
 
 
@@ -52,9 +53,61 @@
         </div>
     </div>
 
+    <div class="empty-row"></div>
+
     <div class="row">
         <div class='offset-md-2 col-md-8'>
             <div>특정 예시 가지고 어탠션 시각화를 넣을 예정이다.</div>
+        </div>
+    </div>
+
+    <div class="empty-row"></div>
+
+    <div class="row">
+        <div class='offset-md-2 col-md-8'>
+            <p class="semi-title">필터링 기준</p>
+            <p>전체 채팅중 유해한 멘트가 8%이상 등장한 bj의 영상들이 필터링이 됩니다.</p>
+        </div>
+    </div>
+
+    <div class="empty-row"></div>
+
+    <div class="row">
+        <div class='offset-md-2 col-md-8'>
+            <p class="semi-title">차단 리스트 top10</p>
+            <p>필터링된 bj의 영상들은 블랙리스트로 관리되며 일주일마다 리스트가 갱신됩니다.</p>
+            <table class='table table-striped'>
+                <thead>
+                    <tr>
+                        <th>순위</th>
+                        <th>닉네임</th>
+                        <th>플랫폼</th>
+                        <th>유해도</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>철구</td>
+                        <td>아프리카tv</td>
+                        <td>12%</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="empty-row"></div>
+
+    <div class="row">
+        <div class='offset-md-2 col-md-8'>
+            <p class="semi-title">유저 사용 화면</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class='offset-md-2 col-md-8 text-center'>
+            <video src="{{ url_for('static',filename='images/use_window.mp4') }}" loop='loop' autoplay='autoplay'></video>
         </div>
     </div>
 
@@ -66,7 +119,6 @@
 
             // The data for our dataset
             data: {
-    //                labels: ['문제 언어 사용', '폭력적', '선정적', '기타'],
                 labels: ['기타', '선정적', '폭력적', '문제 언어 사용'],
                 datasets: [{
                     label: '인터넷 방송 유해 컨탠츠 비율',
@@ -82,6 +134,14 @@
                     position: 'bottom',
                     fontSize: 18,
                     text:"인터넷 방송 유해 컨탠츠 비율(%)"
+                },
+                legend:{
+                    position:'top',
+                    labels:{
+                        fontSize:16,
+                        boxWidth:50,
+                    },
+                    reverse:true,
                 },
             }
         });
