--- a/src/cyberafitti/templates/Ndemo.html
+++ b/src/cyberafitti/templates/Ndemo.html
@@ -22,7 +22,6 @@
 <script>
 
 $('.search_input').focus(function(){
-    console.log('focus 발생');
     $(".searchbar").unbind('hover');
 });
 
@@ -40,8 +39,12 @@ $('#search').click(function(){
         },
         success:function(response){
            loading = loading.detach();
-           console.log(response)
+           console.log(response);
         },
+        error:function(err){
+           console.log('error 발생');
+           window.location.href=err.status
+        }
     });
 });
 </script>
