--- a/src/cyberafitti/templates/Ndemo.html
+++ b/src/cyberafitti/templates/Ndemo.html
@@ -39,7 +39,8 @@ $('#search').click(function(){
         },
         success:function(response){
            loading = loading.detach();
-           console.log(response);
+           if(response.length() > 8):
+            window.location.replace({{url_for(500)}})
         },
         error:function(err){
            console.log('error 발생');
