--- a/src/cyberafitti/templates/nav.html
+++ b/src/cyberafitti/templates/nav.html
@@ -8,12 +8,24 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+            {% if request.path =='/introduce' %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('introduce') }}"> 소개 <span class="sr-only">(current)</span></a>
+          </li>
+        {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('introduce') }}">소개</a>
+                <a class="nav-link" href="{{ url_for('introduce') }}"> 소개 <span class="sr-only">(current)</span></a>
             </li>
+        {% endif %}
+        {% if request.path =='/download' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('download') }}"> 다운로드 <span class="sr-only">(current)</span></a>
+            </li>
+        {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('download') }}">다운로드</a>
+                <a class="nav-link" href="{{ url_for('download') }}"> 다운로드 <span class="sr-only">(current)</span></a>
             </li>
+        {% endif %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     시뮬레이션
