--- a/src/cyberafitti/templates/base.html
+++ b/src/cyberafitti/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko">
   <head>
+    <title>Cyberaffiti</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,9 +14,17 @@
     <script src="https://kit.fontawesome.com/128a736b7f.js"></script>
     <script src="{{ url_for('static', filename='js/Chart.bundle.min.js') }}"></script>
 
-
-    <title>Cyberaffiti</title>
-
+    <style>
+        #particles-js {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background: linear-gradient(to bottom, rgba(117, 114, 113, 0.8) 10%, rgba(40, 49, 77, 0.8) 30%, rgba(29, 35, 71, 0.8) 50%, rgba(19, 25, 28, 0.8) 80%, rgba(15, 14, 14, .8) 100%), url(https://38.media.tumblr.com/tumblr_m00c3czJkM1qbukryo1_500.gif);
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: 50% 50%;
+        }
+    </style>
 
   </head>
   <body>
@@ -35,8 +44,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="{{ url_for('static', filename='bootstrap/bootstrap.min.js') }}"></script>
   </body>
-{#<footer>#}
-{#    footer!#}
-{#</footer>#}
+
 </html>
 
