--- a/src/cyberafitti/templates/download.html
+++ b/src/cyberafitti/templates/download.html
@@ -2,16 +2,20 @@
 
 {% block contents %}
     <div class="row">
-        <div class="col-md-12">
+        <div class="offset-md-2 col-md-8">
             <p class="semi-title">Download</p>
         </div>
     </div>
 
     <div class="empty-row"></div>
     <div class="empty-row"></div>
-    <div class="empty-row"></div>
-    <div class="empty-row"></div>
 
+    <div class="row text-center">
+        <div class="offset-md-2 col-md-8">
+            <i class="download-icon fab fa-chrome"></i>
+        </div>
+    </div>
+    <div class="empty-row"></div>
     <div class='row'>
         <div class="offset-md-2 col-md-8">
             <a class="btn-block btn btn-primary btn-lg" href="https://chrome.google.com/webstore/category/extensions">Download here</a>
