--- a/src/cyberafitti/templates/Ndemo.html
+++ b/src/cyberafitti/templates/Ndemo.html
@@ -188,7 +188,7 @@ $('form').submit(function(e){
           "retina_detect": true
         });
         {#container.before(loading);#}
-        {#this.submit();#}
+        this.submit();
     }
 
 });
