--- a/src/cyberafitti/templates/error/403.html
+++ b/src/cyberafitti/templates/error/403.html
@@ -4,9 +4,13 @@
     <div class="row text-center">
         <div class="offset-md-2 col-md-8">
             <hr>
-            <br><br><br><br>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
             <h1 style="font-weight: bold;">사용 권한이 없습니다</h1>
-            <br><br><br><br>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
             <hr>
         </div>
     </div>
