--- a/src/cyberafitti/templates/error/500.html
+++ b/src/cyberafitti/templates/error/500.html
@@ -4,9 +4,13 @@
     <div class="row text-center">
         <div class="offset-md-2 col-md-8">
             <hr>
-            <br><br><br><br>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
             <h1 style="font-weight: bold;">죄송합니다 빠른 시일 내에 서비스 정상화 하겠습니다</h1>
-            <br><br><br><br>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
             <hr>
         </div>
     </div>
