--- a/src/cyberafitti/templates/header_full.html
+++ b/src/cyberafitti/templates/header_full.html
@@ -7,7 +7,6 @@
     <link rel='stylesheet' href="{{ url_for('static', filename='bootstrap/bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/full.css') }}">
-    <script src="https://kit.fontawesome.com/128a736b7f.js"></script>
 
 
     <title>Cyberaffiti</title>
@@ -51,3 +50,6 @@
         </nav>
 
         <div class="container-fluid board-content">
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
+            <div class="empty-row"></div>
