--- a/src/cyberafitti/templates/download.html
+++ b/src/cyberafitti/templates/download.html
@@ -19,7 +19,7 @@
     <div class="empty-row"></div>
     <div class='row text-center'>
         <div class="offset-md-2 col-md-8">
-            <a class="btn btn-link btn-lg" href="https://chrome.google.com/webstore/detail/cyberaffiti/iglebngmpbfnkjcccpkdleefmdpekkoe">Download here</a>
+            <a class="btn btn-link btn-lg" href="https://chrome.google.com/webstore/detail/cyberaffiti/iglebngmpbfnkjcccpkdleefmdpekkoe">Download Here</a>
         </div>
     </div>
 {% endblock contents %}
