--- a/src/cyberafitti/templates/Ndemo.html
+++ b/src/cyberafitti/templates/Ndemo.html
@@ -36,6 +36,30 @@
     <div class="empty-row"></div>
     <div class="empty-row"></div>
     <div class="empty-row"></div>
+    <div class="empty-row"></div>
+    <div class="empty-row"></div>
+
+    {% if result %}
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">당신이 입력한 문장의 유해정도</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>{{query}}</p>
+                <p><span class="accent warning">{{ result }}%</span> 유해합니다.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    {% endif %}
 
     <form action="{{url_for('demo')}}" method='post'>
         <div class="form-group form-row searchbox">
@@ -51,14 +75,14 @@
     </form>
 
 
-    {% if query %}
-      <div class="row text-center">
-        <div class="offset-md-2 col-md-8">
-            <p>{{ query }}</p>
-            <p><span class="accent warning">{{ result }}%</span> 유해합니다.</p>
-        </div>
-      </div>
-    {% endif %}
+{#    {% if query %}#}
+{#      <div class="row text-center">#}
+{#        <div class="offset-md-2 col-md-8">#}
+{#            <p>{{ query }}</p>#}
+{#            <p><span class="accent warning">{{ result }}%</span> 유해합니다.</p>#}
+{#        </div>#}
+{#      </div>#}
+{#    {% endif %}#}
 
 
 <script>
@@ -72,7 +96,7 @@
       }
     },
     "color": {
-      "value": "#ffffff"
+      "value": "#eb4034"
     },
     "shape": {
       "type": "image",
