--- a/src/cyberafitti/templates/introduce.html
+++ b/src/cyberafitti/templates/introduce.html
@@ -56,10 +56,10 @@
     <div class="empty-row"></div>
 
     <div class="row text-center">
-        <div id='attention' class='offset-md-2 col-md-8 accent' style="font-size: 1.5rem">
+        <div id='attention' class='offset-md-2 col-md-8 accent' style="font-size: 1.4rem">
 
         </div>
-    s</div>
+    </div>
 
     <div class="empty-row"></div>
 
@@ -113,11 +113,11 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/example(5).js') }}"></script>
-    <script src="{{ url_for('static', filename='js/example(4).js') }}"></script>
-    <script src="{{ url_for('static', filename='js/example(3).js') }}"></script>
-    <script src="{{ url_for('static', filename='js/example(2).js') }}"></script>
     <script src="{{ url_for('static', filename='js/example(1).js') }}"></script>
+    <script src="{{ url_for('static', filename='js/example(2).js') }}"></script>
+    <script src="{{ url_for('static', filename='js/example(3).js') }}"></script>
+    <script src="{{ url_for('static', filename='js/example(4).js') }}"></script>
+    <script src="{{ url_for('static', filename='js/example(5).js') }}"></script>
     <script>
         var ctx = document.getElementById('harm').getContext('2d');
         var chart = new Chart(ctx, {
