--- a/src/cyberafitti/templates/download.html
+++ b/src/cyberafitti/templates/download.html
@@ -9,11 +9,10 @@
     </div>
 
     <div class="empty-row"></div>
-    <div class="empty-row"></div>
 
     <div class="row text-center">
         <div class="offset-md-2 col-md-8">
-            <img class="download-img" src="{{ url_for('static', filename='images/chrome.png') }}">
+            <img class="download-img" src="{{ url_for('static', filename='images/logo.png') }}">
         </div>
     </div>
     <div class='row text-center'>
