--- a/src/cyberafitti/templates/nav.html
+++ b/src/cyberafitti/templates/nav.html
@@ -32,10 +32,10 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('demo') }}">Demo</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{ url_for('youtube') }}">유튜브</a>
-                    <a class="dropdown-item" href="{{ url_for('twitch') }}">트위치</a>
-                    <a class="dropdown-item" href="{{ url_for('afreeca') }}">아프리카</a>
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a class="dropdown-item" href="{{ url_for('youtube') }}">유튜브</a>#}
+{#                    <a class="dropdown-item" href="{{ url_for('twitch') }}">트위치</a>#}
+{#                    <a class="dropdown-item" href="{{ url_for('afreeca') }}">아프리카</a>#}
                 </div>
             </li>
         </ul>
