--- a/src/cyberafitti/templates/header_full.html
+++ b/src/cyberafitti/templates/header_full.html
@@ -39,7 +39,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ url_for('demo') }}">Demo</a>
-                            <div class="dropdown-divider"></div>
+{#                            <div class="dropdown-divider"></div>#}
 {#                            <a class="dropdown-item" href="{{ url_for('youtube') }}">유튜브</a>#}
 {#                            <a class="dropdown-item" href="{{ url_for('twitch') }}">트위치</a>#}
 {#                            <a class="dropdown-item" href="{{ url_for('afreeca') }}">아프리카</a>#}
