--- a/src/cyberafitti/templates/Ndemo.html
+++ b/src/cyberafitti/templates/Ndemo.html
@@ -69,7 +69,8 @@
             </button>
           </div>
           <div class="modal-body" id="attention">
-            <p><span class="accent warning">{{ result }}%</span> 유해합니다.</p>
+            <br>
+            <p class="text-right"><span class="accent warning">{{ result }}%</span> 유해합니다.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
