--- a/src/cyberafitti/templates/introduce.html
+++ b/src/cyberafitti/templates/introduce.html
@@ -66,7 +66,7 @@
     <div class="row">
         <div class='offset-md-2 col-md-8'>
             <p class="semi-title">필터링 기준</p>
-            <p>전체 채팅중 유해한 멘트가 18%이상 등장한 영상들이 필터링이 됩니다.</p>
+            <p>전체 채팅중 유해한 멘트가 <span class="accent">18%이상</span> 등장한 영상들이 필터링이 됩니다.</p>
         </div>
     </div>
 
@@ -77,7 +77,6 @@
             <p class="semi-title">블랙 리스트 top10</p>
             <p>필터링된 영상들은 블랙리스트로 관리되며 일주일마다 리스트가 갱신됩니다.</p>
             <p>유해한 컨텐츠를 많이 업로드한 비제이 순위</p>
-        </div>
             <table class='table table-striped'>
                 <thead>
                     <tr>
