introduce user window

--- a/src/cyberafitti/templates/introduce.html
+++ b/src/cyberafitti/templates/introduce.html
@@ -114,6 +114,14 @@
         </div>
     </div>
 
+    <div class="empty-row"></div>
+
+    <div class="row">
+        <div class='offset-md-2 col-md-8 text-center'>
+            <video src="{{ url_for('static',filename='images/use_window_stream.mp4') }}" loop='loop' autoplay='autoplay'></video>
+        </div>
+    </div>
+
     <script src="{{ url_for('static', filename='js/example(1).js') }}"></script>
     <script src="{{ url_for('static', filename='js/example(2).js') }}"></script>
     <script src="{{ url_for('static', filename='js/example(3).js') }}"></script>
