--- a/src/cyberafitti/templates/introduce.html
+++ b/src/cyberafitti/templates/introduce.html
@@ -110,6 +110,7 @@
 
     <div class="row">
         <div class='offset-md-2 col-md-8 text-center'>
+            <p class="accent">영상 차단</p>
             <video src="{{ url_for('static',filename='images/use_window.mp4') }}" loop='loop' autoplay='autoplay'></video>
         </div>
     </div>
@@ -118,6 +119,7 @@
 
     <div class="row">
         <div class='offset-md-2 col-md-8 text-center'>
+            <p class="accent">stream 차단</p>
             <video src="{{ url_for('static',filename='images/user_window_stream.mp4') }}" loop='loop' autoplay='autoplay'></video>
         </div>
     </div>
