--- a/src/cyberafitti/templates/introduce.html
+++ b/src/cyberafitti/templates/introduce.html
@@ -107,19 +107,27 @@
             <p class="semi-title">유저 사용 화면</p>
         </div>
     </div>
+    <div class="row">
+        <div class='offset-md-2 col-md-8'>
+            <p class="accent">영상 차단 작동 화면</p>
+        </div>
+    </div>
 
     <div class="row">
         <div class='offset-md-2 col-md-8 text-center'>
-            <p class="accent">영상 차단</p>
             <video src="{{ url_for('static',filename='images/use_window.mp4') }}" loop='loop' autoplay='autoplay'></video>
         </div>
     </div>
 
     <div class="empty-row"></div>
+    <div class="row">
+        <div class='offset-md-2 col-md-8'>
+            <p class="accent">생방송 차단 작동 화면</p>
+        </div>
+    </div>
 
     <div class="row">
         <div class='offset-md-2 col-md-8 text-center'>
-            <p class="accent">stream 차단</p>
             <video src="{{ url_for('static',filename='images/user_window_stream.mp4') }}" loop='loop' autoplay='autoplay'></video>
         </div>
     </div>
