--- a/src/cyberafitti/static/css/main.css
+++ b/src/cyberafitti/static/css/main.css
@@ -28,6 +28,10 @@
     width: 17rem;
     height: 17rem;
 }
+.download-info{
+    max-width: 100%;
+    max-height: 100%;
+}
 #particles-js {
   position: absolute;
   width: 100%;
